--- a/src/app/component-demo/component-wrapper.component.html
+++ b/src/app/component-demo/component-wrapper.component.html
@@ -1,9 +1,13 @@
 <div class="row well">
   <h3>{{component.name}}</h3>
 
-  <div class="col-sm-6">
+  <!--PROJECT THE COMPONENT-->
+  <div class="col-sm-6 well-again">
     <ng-content></ng-content>
   </div>
 
-  <div class="col-sm-6" [innerHTML]="readmeMarkup"></div>
+  <!--RENDER THE README-->
+  <div class="col-sm-6">
+    <div [innerHTML]="readmeMarkup"></div>
+  </div>
 </div>
