--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,44 +1,40 @@
 $border: 1px solid #D2D8DA;
-$border-radius: 5px;
+$cell-padding: 0.5em 1em;
+$header-text: #101010;
+$cell-text: #222;
+$bg-light: transparent;
+$bg-dark: #cfc8bf;
 
-
-
-
-.table-striped > tbody > tr:nth-of-type(odd) {
-  background-color: white;
+.table {
+  background-color: $bg-light;
+  border-collapse: collapse;
+  border-spacing: 0;
+  empty-cells: show;
+  border: $border;
+  width: 100%;
 }
 
-table{
-  border-collapse: separate;
-  border-radius: $border-radius;
-  thead {
-    border-width: 2px;
-    th {
-      border-top: $border;
-      border-bottom: $border;
-      padding: 8px;
-      &:first-child {
-        border-left: $border;
-        border-top-left-radius: $border-radius;
-      }
-      &:last-child {
-        border-right: $border;
-        border-top-right-radius: $border-radius;
-      }
-    }
-  }
-  tbody {
-    tr:last-child {
-      td:first-child {
-        border-bottom-left-radius: $border-radius;
-      }
-      td:last-child {
-        border-bottom-right-radius: $border-radius;
-      }
-    }
-  }
+.table td,
+.table th {
+  border-left: $border;
+  padding: $cell-padding;
 }
 
-table tr:last-child td:last-child {
-  border-bottom-right-radius: 5px;
+.table thead {
+  background-color: darken($bg-dark, 10);
+  color: $header-text;
+  text-align: left;
+  vertical-align: bottom;
+}
+
+.table td {
+  background-color: transparent;
+}
+
+.table-striped tr:nth-child(even) td {
+  background-color: $bg-dark;
+}
+
+.table-bordered td {
+  border-bottom: $border;
 }
